2000-02-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c: Remember the longest common OID prefix of all nodes
	defined in a module. This is used by smiGetFirstNode() and
	smiGetNextNode() to limit the searched subtree.

	* lib/smi.h.in: Dropped SmiValueformat. The way a value is
	specified in a module file is no longer visible at the API.

2000-02-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed basetype in default value SmiValue
	structs.

	* tools/dump-smi.c (getValueString): fixed printing of zero-length
	binary and hexadecimal strings in several dump modules. fixed
	braces in BITS default values.

	* lib/parser-smi.y (checkDefvals): OID DEFVALs are now
	represented as a string of the form ``Module::name'' with
	SmiValueformat == SMI_VALUEFORMAT_NAME.

	* lib/scanner-smi.l: Juergen applied some *enormous* scanner
	speedup patches.

	* lib/smi.h.in: A new flag SMI_FLAG_NODESCR can be used to
	suppress storage of descriptions and references in memory.

2000-02-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* ANNOUNCE: Finalized things for release 0.2. Many bugs
	have been fixed and things have changed against the latest
	0.1.x release. Only some of them are listed below.

2000-02-12  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: Rudimentary AGENT-CAPABILITIES support.
	They can be parsed to nodes and dumped as nodes or object
	identities in SMIv1/v2/ng. Other attributes than status,
	description and references are not yet supported.
	
	* lib/parser-smi.y: Solved all shift/reduce and reduce/reduce
	conflicts of the SMIv1/v2 grammar.
	
2000-02-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c: Types of tables (SEQUENCE) and rows (SEQUENCE OF)
	are now hidden from the API.

	* tools/smiquery.c: implicitly defined types are no longer
	exported with visible names. So `smiquery type ...' now must
	detect node names to retrieve their implicit types.

	* mibs/ietf/SNMPv2-USEC-MIB: added module (RFC 1910).
	